--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -12,3 +12,17 @@ body {
   line-height: 1.6em;
   margin-top: 30px;
 }
+
+@mixin h2Title($size, $weight, $margin) {
+  font-size: $size;
+  font-weight: $weight;
+  margin: $margin;
+}
+
+.h2-title {
+  @include h2Title(1.5rem, 700, 4rem 0);
+
+  &-card {
+    @include h2Title(1.125rem, 700, 2rem 0);
+  }
+}
