--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,6 +20,7 @@
 @import "layout/title";
 @import "layout/footer";
 
+@import "pages/home";
 @import "pages/products";
 @import "pages/login";
 @import "pages/favourite";
