--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1174,40 +1174,20 @@ footer .legal-links li {
   outline-color: #484848;
 }
 
-.images-cards-container {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  display: flex;
-  flex-wrap: nowrap;
-  height: 300px;
-  padding-bottom: 10px;
+.carousel-edit > button {
+  z-index: 55555;
 }
-.images-cards-container::-webkit-scrollbar {
-  height: 3px;
-}
-.images-cards-container::-webkit-scrollbar-track {
-  background-color: #F5F5F5;
-}
-.images-cards-container::-webkit-scrollbar-thumb {
-  background: #111;
-}
-.images-cards-container .image-card {
+.carousel-edit .image-card {
   position: relative;
-  display: inline-flex;
-  width: 40%;
-  margin-right: 2%;
 }
-.images-cards-container .image-card img {
-  min-width: 100%;
-}
-.images-cards-container .image-card .button-holder {
-  width: 100%;
+.carousel-edit .image-card .button-holder {
+  width: 95%;
   position: absolute;
   justify-content: center;
   text-align: center;
   bottom: 1.5rem;
 }
-.images-cards-container .image-card .button-holder button {
+.carousel-edit .image-card .button-holder > button {
   border-radius: 30px;
   padding: 15px 50px;
   border: none;
@@ -1224,10 +1204,10 @@ footer .legal-links li {
   font-size: 0.8rem;
   font-weight: 900;
 }
-.images-cards-container .image-card .button-holder button:hover {
+.carousel-edit .image-card .button-holder > button:hover {
   outline-color: #484848;
 }
-.images-cards-container .image-card .button-holder button:hover {
+.carousel-edit .image-card .button-holder > button:hover {
   background-color: #F5F5F5;
 }
 
