--- a/assets/scss/pages/_category.scss
+++ b/assets/scss/pages/_category.scss
@@ -2,29 +2,20 @@
     @include SeeAllBtn;
 }
 
-.images-cards-container {
-    @include slidder;
+.carousel-edit {
+    &>button{
+        z-index: 55555;
+    }
     .image-card {
         position: relative;
-        display: inline-flex;
-        width: 40%;
-        margin-right: 2%;
-
-        img {
-            min-width: 100%;
-
-        }
-
         .button-holder {
-            width: 100%;
+            width:95%;
             position: absolute;
             justify-content: center;
             text-align: center;
             bottom: 1.5rem;
-
-            button {
+            &>button {
                 @include SeeAllBtn;
-
                 &:hover {
                     background-color: $secondary-color;
                 }
