add new features

--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -41,7 +41,10 @@
   .body-container {
     margin-right: 1rem;
     padding-left: 0;
-    width: 90vw;
+  }
+
+  .mt-nav {
+    // margin-top: 10rem;
   }
 
   .mt-nav-2 {
