--- a/assets/scss/pages/_category.scss
+++ b/assets/scss/pages/_category.scss
@@ -2,27 +2,17 @@
     @include SeeAllBtn;
 }
 
-.images-cards-container {
-    @include slidder;
+.carousel-edit{
     .image-card {
         position: relative;
         display: inline-flex;
-        width: 40%;
-        margin-right: 2%;
-
-        img {
-            min-width: 100%;
-
-        }
-
         .button-holder {
             width: 100%;
             position: absolute;
             justify-content: center;
             text-align: center;
             bottom: 1.5rem;
-
-            button {
+            &>button {
                 @include SeeAllBtn;
 
                 &:hover {
@@ -30,6 +20,9 @@
                 }
             }
         }
+    }
+    &>button{
+        z-index: 55555;
     }
 }
 
