--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -14,5 +14,6 @@ $txt-color: #757575;
 $secondary-color:#F5F5F5;
 $border-color:#DFDFDF;
 $orange:#CA5008;
+$blue:#0f58a1;
 $body-margin-right: 2.5rem;
 $body-padding-left: 4rem;
