--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -859,6 +859,22 @@ footer .legal-links li {
 .prod-container:hover header {
   opacity: 1;
 }
+.prod-container:hover .card-icon {
+  opacity: 1;
+}
+.prod-container .card-icon {
+  font-size: 22px;
+  font-weight: bold;
+  background-color: #0058a3;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  color: white;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+}
 
 @media only screen and (max-width: 576px) {
   .prod-container {
