--- a/assets/scss/pages/_products.scss
+++ b/assets/scss/pages/_products.scss
@@ -65,6 +65,25 @@
   &:hover header {
     opacity: 1;
   }
+
+  &:hover .card-icon {
+    opacity: 1;
+  }
+
+  .card-icon {
+    font-size: 22px;
+    font-weight: bold;
+    background-color: #0058a3;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    color: white;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+  }
+  
 }
 
 @media only screen and (max-width: 576px) {
@@ -315,6 +334,7 @@
 
 
 }
+
 
 // ===
 // >>>>>>> 78701f4457878335095dd23bc5b3f44ed3ab21ff
