--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,7 @@
 @import "components/teaser-container";
 @import "components/image-container";
 @import "components/menu";
+@import "components/loader";
 
 @import "layout/header";
 @import "layout/image-gallery";
