--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -398,6 +398,57 @@ body {
   display: none;
 }
 
+@keyframes ldio-evnxwkwzfho {
+  0%, 100% {
+    animation-timing-function: cubic-bezier(0.45, 0, 0.9, 0.55);
+  }
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, 25px);
+    animation-timing-function: cubic-bezier(0, 0.45, 0.55, 0.9);
+    -webkit-transform: translate(0, 25px);
+    -moz-transform: translate(0, 25px);
+    -ms-transform: translate(0, 25px);
+    -o-transform: translate(0, 25px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+.ldio-evnxwkwzfho div {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #111;
+  animation: ldio-evnxwkwzfho 1s linear infinite;
+  -webkit-animation: ldio-evnxwkwzfho 1s linear infinite;
+}
+
+.loadingio-spinner-ball-u6x6jkb8i1s {
+  height: 50px;
+  display: inline-block;
+  background: white;
+}
+
+.ldio-evnxwkwzfho {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0;
+  -webkit-transform: translateZ(0) scale(1);
+  -moz-transform: translateZ(0) scale(1);
+  -ms-transform: translateZ(0) scale(1);
+  -o-transform: translateZ(0) scale(1);
+}
+
+.ldio-evnxwkwzfho div {
+  box-sizing: content-box;
+}
+
 .header-messages {
   min-height: 2.5rem;
 }
@@ -1466,12 +1517,6 @@ footer .legal-links li {
   box-shadow: none;
 }
 
-#slider-items li a {
-  cursor: pointer ;
-  color: #000 ;
-}
-
-#slider-items li a:hover {text-decoration: underline;}
 .logout {
   text-decoration: underline;
   text-decoration-color: #111;
