add shared component between sign and log

--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -30,6 +30,7 @@
   background-color: transparent;
   border: none;
   border-bottom: 1px solid #000;
+  margin-top: 20px ;
 }
 
 // Style for favoutite and shopping
