--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -7,6 +7,10 @@
   left: auto;
   right: $body-margin-right;
   padding-left: $body-padding-left;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  z-index: 1;
 
   & > * {
     margin-left: 1.2rem;
