--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -1,51 +1,60 @@
-.menu-btn{
-    @include radius(50%);
-    position: fixed;
-    &:hover{
-        background-color: $secondary-color;
-    }
+.menu-btn {
+  @include radius(50%);
+  position: fixed;
+  top: 2rem;
+  left: 2rem;
+  z-index: 10;
+
+  &:hover {
+    background-color: $secondary-color;
+  }
+
+  i {
+    font-size: 1.4rem;
+    font-weight: 600;
+  }
 }
-.menu-bar{
-    @media only screen and (max-width: 890px){
-        width: 100vw;
+.menu-bar {
+  @media only screen and (max-width: 890px) {
+    width: 100vw;
+  }
+  @media screen and (min-width: 890px) {
+    width: 35vw;
+    .menu-body {
+      padding-left: 30%;
+      padding-right: 5%;
     }
-    @media screen and (min-width:890px){
-        width: 35vw;
-        .menu-body{
-            padding-left: 30%;
-            padding-right: 5%;
-        }
+  }
+  .menu-header {
+    justify-content: start;
+    img {
+      margin-left: 30%;
     }
-    .menu-header{
-        justify-content: start;
-        img{
-            margin-left: 30%;
-        }
+  }
+  .menu-body {
+    ul {
+      list-style-type: none;
+      line-height: 4rem;
+      li {
+        font-size: $title-font-size * 1.3;
+        font-weight: $title-font-weight;
+      }
     }
-    .menu-body{   
-        ul{
-            list-style-type: none;
-            line-height: 4rem;
-            li{
-                font-size: $title-font-size*1.3;
-                font-weight: $title-font-weight;
-            }
-        }
-        .small-text-list{
-            list-style-type: none;
-            line-height: 2rem;
-            li{
-                font-size: $small-text-size;
-                font-weight: $title-font-weight*0.5;
-                color: $txt-color;
-            }       
-        }
-        .selector-btn{
-            @include SeeAllBtn;
-            padding: 2px 10px;
-        }
+    .small-text-list {
+      list-style-type: none;
+      line-height: 2rem;
+      li {
+        font-size: $small-text-size;
+        font-weight: $title-font-weight * 0.5;
+        color: $txt-color;
+      }
     }
+    .selector-btn {
+      @include SeeAllBtn;
+      padding: 2px 10px;
+    }
+  }
 }
-.other-content{
-    display: none;
+.other-content {
+  display: none;
 }
