--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,11 +1,12 @@
 .carousel {
   position: relative;
 
-  &>button {
+  & > button {
+    z-index: 1;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    padding: .5rem .8rem;
+    padding: 0.5rem 0.8rem;
     cursor: pointer;
 
     &.right-chevron {
@@ -93,7 +94,6 @@
       }
     }
 
-
     button {
       width: 3.5rem;
       height: 3.5rem;
@@ -111,7 +111,6 @@
         i {
           color: #000;
         }
-
       }
     }
   }
