--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -9,9 +9,26 @@
     background-color: $secondary-color;
   }
 
+  &.left-arrow {
+    position: relative !important;
+    top: 0;
+    left: -6.5rem;
+  }
+
   i {
     font-size: 1.4rem;
     font-weight: 600;
+
+    &.bi-arrow-left-short {
+      font-size: 1.9rem;
+    }
+
+    &.bi-x {
+      position: absolute;
+      top: 0;
+      left: 2rem;
+      font-size: 1.7rem;
+    }
   }
 }
 .menu-bar {
@@ -27,14 +44,19 @@
   }
   .menu-header {
     justify-content: start;
+    padding-top: 1.8rem;
+
     img {
       margin-left: 30%;
     }
   }
   .menu-body {
+    padding-top: 2rem;
+
     ul {
       list-style-type: none;
       line-height: 4rem;
+      padding-left: 0;
       li {
         font-size: $title-font-size * 1.3;
         font-weight: $title-font-weight;
@@ -43,10 +65,27 @@
     .small-text-list {
       list-style-type: none;
       line-height: 2rem;
+      padding-left: 0;
       li {
         font-size: $small-text-size;
         font-weight: $title-font-weight * 0.5;
         color: $txt-color;
+      }
+
+      & + div {
+        position: absolute;
+
+        & > * {
+          margin-right: 1rem;
+          display: flex;
+          align-items: center;
+        }
+
+        button {
+          i {
+            padding-right: 0.4rem;
+          }
+        }
       }
     }
     .selector-btn {
