--- a/src/assets/scss/layout/_title.scss
+++ b/src/assets/scss/layout/_title.scss
@@ -1,12 +1,13 @@
-.head-title{
-    font-size: $title-font-size;
-    font-weight: $title-font-weight;
+.head-title {
+  font-size: $title-font-size;
+  font-weight: $title-font-weight;
+  position: absolute;
 }
-.small-text{
-    font-size: $small-text-size;
-    color:$small-text-color;
+.small-text {
+  font-size: $small-text-size;
+  color: $small-text-color;
 }
-.big-title{
-    font-size:$title-font-size*1.5;
-    font-weight: $title-font-weight;
+.big-title {
+  font-size: $title-font-size * 1.5;
+  font-weight: $title-font-weight;
 }
