--- a/src/assets/scss/pages/_products.scss
+++ b/src/assets/scss/pages/_products.scss
@@ -97,6 +97,10 @@
   color: $orange;
 }
 
+.selectedV{
+  border: 1px solid $small-text-color;
+}
+
 .variant-container {
   width: 2.5rem;
   height: 2.5rem;
@@ -104,6 +108,7 @@
   margin-left: 0.25rem;
   cursor: pointer;
   margin-bottom: 0.25rem;
+  box-sizing: border-box;
 
   &:hover {
     border: 1px solid $small-text-color;
