--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -17,3 +17,6 @@ $orange:#CA5008;
 $blue:#0f58a1;
 $body-margin-right: 2.5rem;
 $body-padding-left: 4rem;
+
+$body-margin-left: 2.5rem;
+$body-padding-right: 4rem;
