--- a/src/assets/scss/base/_utilities.scss
+++ b/src/assets/scss/base/_utilities.scss
@@ -1,8 +1,14 @@
-.body-container {
+.body-container-ltr{
   width: 92vw;
   margin-left: auto;
   margin-right: $body-margin-right;
   padding-left: $body-padding-left;
+}
+.body-container-rtl{
+  width: 92vw;
+  margin-right: auto;
+  margin-left: $body-margin-left;
+  padding-right: $body-padding-right;
 }
 
 .bi {
@@ -42,11 +48,14 @@
 }
 
 @media only screen and (max-width: 815px) {
-  .body-container {
+  .body-container-ltr{
     margin-right: 1rem;
     padding-left: 0;
   }
-
+  .body-container-rtl{
+    margin-left: 1rem;
+    padding-right: 0;
+  }
   .mt-nav {
     // margin-top: 10rem;
   }
@@ -61,7 +70,10 @@
 }
 
 @media only screen and (max-width: 750px) {
-  .body-container {
+  .body-container-ltr{
+    margin: auto;
+  }
+  .body-container-rtl{
     margin: auto;
   }
 }
