Add search products

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -86,7 +86,7 @@
       li {
         font-size: 0.9rem;
 
-        a {
+        & > * {
           padding: 1rem;
           display: block;
         }
