Add search history

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -83,6 +83,18 @@
         padding-bottom: 1rem;
       }
 
+      p {
+        display: inline-block;
+        font-size: 0.75rem;
+        color: #666;
+      }
+
+      button {
+        text-decoration: underline;
+        font-size: 0.75rem;
+        color: #666;
+      }
+
       li {
         font-size: 0.9rem;
 
