Add place order page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,6 +20,7 @@
 @import 'layout/header';
 @import 'layout/image-gallery';
 @import 'layout/title';
+@import 'layout/order';
 @import 'layout/footer';
 
 @import 'pages/home';
