add new products page and update subcategory page

--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -44,7 +44,7 @@
   }
   .card-right {
     padding: 20px;
-    background-color: #204b7e;
+    background-color: #00264d;
     display: flex;
     flex-direction: column;
     color: $secondary-color;
