Fix radio button issue

--- a/src/components/Rating/rating.css
+++ b/src/components/Rating/rating.css
@@ -1,19 +1,26 @@
-input[type="radio"]{display: none;}
-
-.ratingVal{display:flex;
-           padding: 10px;
-           min-height: 100vh;
+.radio-button {
+  display: none;
 }
 
-.header{font-size: 25px;}
+.ratingVal {
+  display: flex;
+  padding: 10px;
+  min-height: 100vh;
+}
 
-.star{ cursor: pointer; 
-       transition: color 200ms ;
-       margin: 7px;
-           
-    }
+.header {
+  font-size: 25px;
+}
 
-.rate{text-decoration: underline;
-      font-weight: bold;
-      font-size: small;
-      color: rgb(219, 189, 18);}
+.star {
+  cursor: pointer;
+  transition: color 200ms;
+  margin: 7px;
+}
+
+.rate {
+  text-decoration: underline;
+  font-weight: bold;
+  font-size: small;
+  color: rgb(219, 189, 18);
+}
