--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -4,9 +4,7 @@
 
 .navbar {
   width: 92vw;
-  left: auto;
-  right: $body-margin-right;
-  padding-left: $body-padding-left;
+
   background-color: #fff;
   position: fixed;
   top: 0;
@@ -159,6 +157,18 @@
     justify-content: space-between;
     padding-left: 1rem;
   }
+}
+
+.navbar-ltr {
+  left: auto;
+  right: $body-margin-right;
+  padding-left: $body-padding-left;
+}
+
+.navbar-rtl {
+  right: auto;
+  left: $body-margin-left;
+  padding-right: $body-padding-right;
 }
 
 @media only screen and (max-width: 1200px) {
