--- a/src/assets/scss/pages/_products.scss
+++ b/src/assets/scss/pages/_products.scss
@@ -24,6 +24,12 @@
   }
 }
 
+@media only screen and (max-width: 778px) {
+  .scroll{
+    overflow-x: scroll
+  }
+}
+
 .filter-btn {
   @include radius(20px);
   background-color: $secondary-color;
