--- a/src/assets/scss/base/_utilities.scss
+++ b/src/assets/scss/base/_utilities.scss
@@ -90,3 +90,16 @@
     margin: auto;
   }
 }
+
+.form-check-input {
+  &:checked{ 
+    background-color: #111;
+    border-color: #111;
+   }
+
+   &:focus{ 
+    outline:0px !important;
+    -webkit-appearance:none;
+    box-shadow: none !important;
+   }
+}
