--- a/src/components/Rating/rating.css
+++ b/src/components/Rating/rating.css
@@ -5,15 +5,19 @@ input[type="radio"]{display: none;}
            min-height: 100vh;
 }
 
-.header{font-size: 25px;}
+.header{font-size: 30px;margin:50px 0;font-weight: bold;}
 
-.star{ cursor: pointer; 
+.star{
+       cursor: pointer;
        transition: color 200ms ;
-       margin: 7px;
-           
-    }
+       margin:1px 7px;
+      
+}
 
 .rate{text-decoration: underline;
       font-weight: bold;
       font-size: small;
       color: rgb(219, 189, 18);}
+
+
+.body{margin:50px 0}      
