--- a/src/assets/scss/pages/_products.scss
+++ b/src/assets/scss/pages/_products.scss
@@ -72,11 +72,13 @@
     opacity: 1;
   }
 
-  &:hover .card-icon {
+  &:hover .card-icon-ltr {
     opacity: 1;
   }
-
-  .card-icon {
+  &:hover .card-icon-rtl {
+    opacity: 1;
+  }
+  .card-icon-ltr {
     font-size: 22px;
     font-weight: bold;
     background-color: #0058a3;
@@ -86,6 +88,19 @@
     color: white;
     position: absolute;
     right: 0;
+    bottom: 0;
+    opacity: 0;
+  }
+  .card-icon-rtl {
+    font-size: 22px;
+    font-weight: bold;
+    background-color: #0058a3;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    color: white;
+    position: absolute;
+    left: 0;
     bottom: 0;
     opacity: 0;
   }
