--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -60,4 +60,29 @@ $txt-color: rgb(117, 117, 117);
         .selct-label-form-sign { margin-top: 30px;}
 
     }
+
+
+
+    .eye{
+        position: absolute;
+        bottom: 10px;
+        margin:0 10px;
+        right:0;
+        cursor: pointer;
+    }    
+    .eyeAr{
+        position: absolute;
+        bottom: 10px;
+        margin:0 10px;
+        left:0;
+        cursor: pointer;
+    }
+    .w100{
+        width: '100%';
+    }
+
+    .inpCont{
+        position: relative;
+    }
+   
 }
