--- a/src/assets/scss/pages/_profile.scss
+++ b/src/assets/scss/pages/_profile.scss
@@ -26,7 +26,7 @@
 .floating-input-holder{
     font-size: 1rem;
     padding-bottom: 0px;
-    // height: 5px;
+    // height: 30px;
     .edit-input{
         border:none;
         border-radius: 0%;
@@ -37,6 +37,7 @@
         -moz-border-radius: 0%;
         -ms-border-radius: 0%;
         -o-border-radius: 0%;
+        position: relative;
         &:focus{
             border-color: #0058A3;
             box-shadow: none;
@@ -64,4 +65,28 @@
     @include HandleBoxForEachProduct();
     border: #dddddd solid 1px;
     margin: 2%;
+}
+.eye{
+    position: absolute;
+    bottom: 10px;
+    margin:0 10px;
+    right: 1px;
+    color: black;
+    z-index: 1;
+    cursor: pointer;
+}  
+
+.eyeAr{
+    position: absolute;
+    bottom: 10px;
+    margin:0 10px;
+    left: 1px;
+    color: black;
+    z-index: 1;
+    cursor: pointer;
+}  
+
+.error{
+    bottom: 35px;
+
 }
