--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -12,7 +12,9 @@
     &.right-chevron {
       right: 0;
     }
-
+    &.left-chevron {
+      left: 0;
+    }
     .fas {
       font-size: 1.6rem;
     }
