--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -15,9 +15,8 @@ $secondary-color: #f5f5f5;
 $border-color: #dfdfdf;
 $orange: #ca5008;
 $blue: #0f58a1;
-$body-margin-right: 2.5rem;
-$body-margin-left: 2.5rem;
-
-$body-padding-right: 4rem;
-$body-padding-left: 4rem;
+$body-margin-start: 2.5rem;
+$body-margin-end: 2.5rem;
+$body-padding-start: 8rem;
+$body-padding-end: 4rem;
 $overlay-background: rgba(0, 0, 0, 0.5);
