--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -1,8 +1,9 @@
 .menu-btn-ltr {
   @include radius(50%);
   position: fixed;
-  top: 2rem;
-  left: 1.5rem;
+  top: 2.5rem;
+  left: 2.5rem;
+  z-index: 10;
 
   &:hover {
     background-color: $secondary-color;
@@ -33,8 +34,8 @@
 .menu-btn-rtl {
   @include radius(50%);
   position: fixed;
-  top: 2rem;
-  right: 2rem;
+  top: 2.5rem;
+  right: 2.5rem;
   z-index: 10;
 
   &:hover {
