--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -1,8 +1,15 @@
 footer {
   background-color: $secondary-color;
-  padding: 5rem 4rem 0 11%;
   margin-top: 5rem;
-  
+
+  &.footer-ltr {
+    padding: 5rem $body-padding-end 0 $body-padding-start;
+  }
+
+  &.footer-rtl {
+    padding: 5rem $body-padding-start 0 $body-padding-end;
+  }
+
   ul {
     padding: 0;
 
@@ -14,7 +21,7 @@ footer {
 
     li {
       color: $small-text-color;
-      margin-bottom: .75rem;
+      margin-bottom: 0.75rem;
       font-size: $medium-text-size;
     }
   }
@@ -40,7 +47,6 @@ footer {
         }
       }
     }
-
   }
 
   .language-selector {
@@ -54,11 +60,9 @@ footer {
       @include radius(20px);
 
       @include borderHover;
-
     }
 
     .language-switch {
-
       select {
         font-weight: 700;
         background-color: transparent;
@@ -74,7 +78,6 @@ footer {
     p {
       font-size: $small-text-size;
     }
-
   }
 
   .legal-links {
