--- a/src/assets/scss/pages/_favourite.scss
+++ b/src/assets/scss/pages/_favourite.scss
@@ -1,114 +1,113 @@
-@import '../abstracts/mixins'  ;
+@import '../abstracts/mixins';
 
-// var 
+// var
 $txt-color: rgb(117, 117, 117);
-$text-position : center;
-$fixed-number-margin : 20px;
+$text-position: center;
+$fixed-number-margin: 20px;
 
 // Center Section
 .fav-parent {
-    margin-top: 80px;
+  margin-top: 80px;
 
-    .center-fav-page h3,
-    .center-fav-page .fav-srow h6,
-    .prod-box-info .prod-price h6 {
-        @include HandleTxtProduct()
+  .center-fav-page h3,
+  .center-fav-page .fav-srow h6,
+  .prod-box-info .prod-price h6 {
+    @include HandleTxtProduct();
+  }
+
+  .center-fav-page {
+    .product-space {
+      margin-top: 50px;
     }
 
-    .center-fav-page {
-        .product-space {
-            margin-top: 50px;
-        }
+    .fav-srow,
+    .prod-info {
+      @include HandleFlexItems();
+    }
+  }
 
-        .fav-srow,
-        .prod-info {
-            @include HandleFlexItems();
-        }
+  .prod-box-info {
+    .prod-txt {
+      margin-top: 35px;
 
+      h5 {
+        color: black;
+        font-weight: bold;
+      }
+
+      span {
+        @include HandleParagraph();
+      }
     }
 
-    .prod-box-info {
-        .prod-txt {
-            margin-top: 35px;
-
-            h5 {
-                color: black;
-                font-weight: bold;
-            }
-
-            span {
-                @include HandleParagraph();
-            }
-        }
-
-        .prod-img img {
-            @include HandleProductImage();
-        }
-
-        .prod-infoo {
-            @include HandleFlexItems();
-            justify-content: flex-end;
-            margin-top: $fixed-number-margin;
-
-            .prod-box {
-                margin-left: 30px;
-
-                .card-button {
-                    @include ShoppingButton();
-                    width: 100%;
-
-                    i {
-                        padding-right: 10px;
-                    }
-                }
-
-                .card-button:hover {
-                    @include ShoppingButtonHover()
-                }
-
-                select,
-                .del-prod i {
-                    @include HandleSelect();
-                }
-
-                .del-prod {
-                    background-color: transparent;
-                    margin-top: 3px;
-                }
-            }
-        }
+    .prod-img img {
+      @include HandleProductImage();
     }
 
-    .prod-price h6 {
-        margin-top: 30px;
-    }
+    .prod-infoo {
+      @include HandleFlexItems();
+      justify-content: flex-end;
+      margin-top: $fixed-number-margin;
 
-    .total-price {
-        margin-top: 100px;
+      .prod-box {
+        margin-left: 30px;
 
-        .show-price {
-            @include HandleFlexItems();
-            border-top: 1px dashed $txt-color;
-            border-bottom: 1px dashed $txt-color;
-            padding: 8px
+        .card-button {
+          @include ShoppingButton();
+          width: 100%;
+
+          i {
+            padding-right: 10px;
+          }
         }
 
-        .prod-box {
-            text-align: $text-position;
-            margin: $fixed-number-margin auto;
-
-            button {
-                @include ShoppingButton();
-                width: 50%;
-                margin-top: $fixed-number-margin;
-            }
+        .card-button:hover {
+          @include ShoppingButtonHover();
         }
+
+        select,
+        .del-prod i {
+          @include HandleSelect();
+        }
+
+        .del-prod {
+          background-color: transparent;
+          margin-top: 3px;
+        }
+      }
     }
+  }
+
+  .prod-price h6 {
+    margin-top: 30px;
+  }
+
+  .total-price {
+    margin-top: 100px;
+
+    .show-price {
+      @include HandleFlexItems();
+      border-top: 1px dashed $txt-color;
+      border-bottom: 1px dashed $txt-color;
+      padding: 8px;
+    }
+
+    .prod-box {
+      text-align: $text-position;
+      margin: $fixed-number-margin auto;
+
+      button {
+        @include ShoppingButton();
+        width: 50%;
+        margin-top: $fixed-number-margin;
+      }
+    }
+  }
 }
 
-.card-button{
-    @include ShoppingButton();
-    width: 70%;
-    margin-top: $fixed-number-margin;
-    float: right;   
+.card-button {
+  @include ShoppingButton();
+  // width: 70%;
+  margin-top: $fixed-number-margin;
+  float: right;
 }
